# FAA-P2

./: .gitignore  README.md  main.ipynb  preprocessing.ipynb  pyproject.toml
data/: models.csv
models/: lr.pkl  rfr.pkl  xgbr.pkl
notebooks/: eda.ipynb  modeling.ipynb  preprocessing.ipynb  xai_rfr.ipynb
notebooks/modeling/: 01_linear_regression.ipynb  02_random_forest.ipynb  03_xgb_regressor.ipynb
notebooks/xai/: xai_rfr.ipynb  xgb_lime.ipynb  xgb_shap.ipynb
src/faa_p2/: config.py
